@@ -236,6 +236,7 @@
         <linecommenter first="#ifndef JAVA2" last="#endif" comment="false"/>
         <linecommenter first="#ifdef JAVA2" last="#endif" comment="true"/>
         <linecommenter first="#ifdef JAVA5" last="#endif" comment="true"/>
+        <linecommenter first="#ifndef JAVA5" last="#endif" comment="false"/>
         <linecommenter first="#ifdef JAXP-1.3" last="#endif" comment="true"/>
         <linecommenter first="#ifndef JAXP-1.3" last="#endif" comment="false"/>
       </linecommenterset>
@@ -253,6 +254,7 @@
       <linecommenterset begintoken="/* " endtoken=" */" >
         <linecommenter first="#ifndef JAVA2" last="#endif" comment="true"/>
         <linecommenter first="#ifdef JAVA2" last="#endif" comment="false"/>
+        <linecommenter first="#ifndef JAVA5" last="#endif" comment="false"/>
         <linecommenter first="#ifdef JAVA5" last="#endif" comment="true"/>
         <linecommenter first="#ifdef JAXP-1.3" last="#endif" comment="true"/>
         <linecommenter first="#ifndef JAXP-1.3" last="#endif" comment="false"/>
@@ -271,6 +273,7 @@
       <linecommenterset begintoken="/* " endtoken=" */" >
         <linecommenter first="#ifndef JAVA2" last="#endif" comment="true"/>
         <linecommenter first="#ifdef JAVA2" last="#endif" comment="false"/>
+        <linecommenter first="#ifndef JAVA5" last="#endif" comment="true"/>
         <linecommenter first="#ifdef JAVA5" last="#endif" comment="false"/>
         <linecommenter first="#ifdef JAXP-1.3" last="#endif" comment="false"/>
         <linecommenter first="#ifndef JAXP-1.3" last="#endif" comment="true"/>
